k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizapp-backend
  namespace: grupo14
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizapp-backend
  template:
    metadata:
      labels:
        app: organizapp-backend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: organizapp-backend
        image: ghcr.io/optimizapp/proyecto_organizapp_back:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: organizapp-backend
  namespace: grupo14
spec:
  selector:
    app: organizapp-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organizapp-backend
  namespace: grupo14
spec:
  ingressClassName: public
  rules:
  - host: grupo14.inphotech.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: organizapp-backend
            port:
              number: 8080
